#515: UI Bugs
WTF a scrollbar? I'm using only a zoom > 120

--- a/cmdbuild/src/main/webapp/javascripts/ext-4.1.0-ux/css/portal.css
+++ b/cmdbuild/src/main/webapp/javascripts/ext-4.1.0-ux/css/portal.css
@@ -18,9 +18,7 @@
 .x-panel-ghost {
     z-index: 1;
 }
-.x-border-layout-ct {
-    background: #DFE8F6;
-}
+
 .x-portal-body {
     padding: 0 0 0 8px;
 }
